# rusty_roms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-builds.yml
src/: main.rs
src/lib/: dat.rs  files.rs  game.rs  mod.rs  result.rs  rom.rs  set.rs  verify.rs
src/lib/dat/: game.rs  mod.rs
src/lib/input/: files.rs  mod.rs
src/lib/input/dat/: game.rs  mod.rs  rom.rs
src/lib/result/: game.rs  mod.rs  set.rs
src/lib/verify/: hash.rs  mod.rs
