[package]
name = "rusty_roms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde-xml-rs = "0.5.1"
easy-args = "0.3.0"
rust-crypto = "0.2.36"
sha1 = "0.10.1"
hex = "0.4.3"